--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "verified_network_task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Madhavkabra.github.io/Network_Verified_Task",
   "dependencies": {
     "@verified-network/verified-sdk": "1.0.6",
     "@walletconnect/web3wallet": "1.7.3",
@@ -13,7 +14,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint \"src/**/*.{js,jsx}\""
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0"
   }
 }
